@@ -6,8 +6,11 @@ apport (0.14) UNRELEASED; urgency=low
     alternate crash report directory. This is mainly useful for a local test
     suite.
   * apport: Quiesce the apt module's FutureWarning.
+  * preloadlib/libapport.c: Re-raise the signal instead of doing exit() so
+    that the process exits with the same code as it would do without the
+    library.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 18 Aug 2006 12:32:59 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 18 Aug 2006 12:36:05 +0200
 
 apport (0.13) edgy; urgency=low
 
